# AI-Minesweeper

./: CMakeLists.txt
include/: game.h  global.h  helpers.h  simulation.h  solver.h
src/: game.cpp  helpers.cpp  main.cpp  render.cpp  simulation.cpp  solver.cpp
